// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigations can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createNavigation": Object {
      "id": Any<String>,
      "key": Any<String>,
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteNavigation": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "navigation": Object {
      "id": Any<String>,
      "key": Any<String>,
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateNavigation": Object {
      "id": Any<String>,
      "key": Any<String>,
      "links": Array [
        Object {
          "__typename": "ExternalNavigationLink",
          "label": "New External Label",
          "url": "newlinkurl.ch/",
        },
        Object {
          "__typename": "ArticleNavigationLink",
          "article": null,
          "label": "New Article Label",
        },
        Object {
          "__typename": "PageNavigationLink",
          "label": "New Page Label",
          "page": null,
        },
      ],
      "name": "Updated Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
